Report first try.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
+    "seed": "tsx prisma/seed.ts",
     "lint": "eslint"
   },
   "dependencies": {
