--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@tailwindcss/postcss": "^4.1.12",
     "bcryptjs": "^3.0.2",
     "cookie": "^1.0.2",
+    "date-object": "^2.1.6",
     "jose": "^6.0.13",
     "next": "15.5.0",
     "prisma": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-multi-date-picker": "^4.5.2",
     "xlsx": "^0.18.5",
     "zod": "^4.0.17"
   },
