--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-object": "^2.1.6",
     "jose": "^6.0.13",
     "next": "15.5.0",
+    "pg-format": "^1.0.4",
     "prisma": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
