--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "postinstall": "prisma generate",
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "next build",
     "start": "next start",
     "seed": "tsx prisma/seed.ts",
     "lint": "eslint"
