--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.69.0",
     "@prisma/client": "^6.16.2",
     "@tailwindcss/postcss": "^4.1.12",
     "bcryptjs": "^3.0.2",
