--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.69.0",
     "@prisma/client": "^6.16.2",
     "@tailwindcss/postcss": "^4.1.12",
     "bcryptjs": "^3.0.2",
@@ -23,6 +22,7 @@
     "date-object": "^2.1.6",
     "jose": "^6.0.13",
     "next": "15.5.0",
+    "openai": "^6.9.1",
     "pg-format": "^1.0.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
